--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Joseph Coolidge</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header class="hero">
+    <div class="overlay"></div>
+    <nav class="navbar">
+      <div class="logo">Joseph Coolidge</div>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#divisions">Divisions</a></li>
+        <li><a href="#values">Values</a></li>
+        <li><a href="#leadership">Leadership</a></li>
+      </ul>
+    </nav>
+    <div class="hero-content">
+      <h1>Architecting the Future of Enterprise</h1>
+      <p>A strategic umbrella company powering innovation across multiple industries.</p>
+    </div>
+  </header>
 
+  <section id="about" class="section about">
+    <h2>Who We Are</h2>
+    <p>
+      Joseph Coolidge is a parent organization built to support, fund, and guide a diverse portfolio of ventures.
+      Our focus is long-term strategy, sustainable growth, and creating systems that thrive in complexity.
+    </p>
+  </section>
+
+  <section id="divisions" class="section divisions">
+    <h2>Our Divisions</h2>
+    <div class="grid">
+      <div class="card"><h3>Technology</h3><p>Cutting-edge digital development, infrastructure, and automation.</p></div>
+      <div class="card"><h3>Investments</h3><p>Strategic capital placement built on stability and growth forecasting.</p></div>
+      <div class="card"><h3>Services</h3><p>Operational excellence across consulting, logistics, and enterprise support.</p></div>
+      <div class="card"><h3>Innovation Lab</h3><p>Designing the future through research, prototypes, and experimental ventures.</p></div>
+    </div>
+  </section>
+
+  <section id="values" class="section values">
+    <h2>Core Values</h2>
+    <ul class="values-list">
+      <li>Integrity in all operations</li>
+      <li>Forward-thinking strategy</li>
+      <li>Relentless pursuit of excellence</li>
+      <li>Innovation with long-term impact</li>
+    </ul>
+  </section>
+
+  <section id="leadership" class="section leadership">
+    <h2>Leadership</h2>
+    <div class="leader-card">
+      <h3>Joseph Coolidge</h3>
+      <p>Founder & Chief Executive Officer</p>
+      <p>A visionary strategist leading a multi-industry ecosystem with precision and ambition.</p>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <p>© 2025 Joseph Coolidge. All Rights Reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
