--- a/index.html
+++ b/index.html
@@ -7,42 +7,52 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
+  <!-- NAVBAR -->
+  <nav class="navbar">
+    <div class="logo">Joseph Coolidge</div>
+    <ul class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#divisions">Divisions</a></li>
+      <li><a href="#values">Values</a></li>
+      <li><a href="#leadership">Leadership</a></li>
+    </ul>
+  </nav>
+
+  <!-- HERO -->
   <header class="hero">
-    <div class="overlay"></div>
-    <nav class="navbar">
-      <div class="logo">Joseph Coolidge</div>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#divisions">Divisions</a></li>
-        <li><a href="#values">Values</a></li>
-        <li><a href="#leadership">Leadership</a></li>
-      </ul>
-    </nav>
-    <div class="hero-content">
+    <div class="hero-overlay"></div>
+    <div class="hero-inner">
       <h1>Architecting the Future of Enterprise</h1>
-      <p>A strategic umbrella company powering innovation across multiple industries.</p>
+      <p>Strategic infrastructure powering a multi-industry ecosystem.</p>
+      <div class="accent-line"></div>
     </div>
   </header>
 
-  <section id="about" class="section about">
+  <!-- ABOUT -->
+  <section id="about" class="section fade">
     <h2>Who We Are</h2>
     <p>
-      Joseph Coolidge is a parent organization built to support, fund, and guide a diverse portfolio of ventures.
-      Our focus is long-term strategy, sustainable growth, and creating systems that thrive in complexity.
+      Joseph Coolidge is a parent organization built to support, fund, 
+      and guide a diversified portfolio of ventures. We prioritize 
+      long-term strategy, sustainable growth, and systems engineered 
+      to thrive in complex environments.
     </p>
   </section>
 
-  <section id="divisions" class="section divisions">
+  <!-- DIVISIONS -->
+  <section id="divisions" class="section fade">
     <h2>Our Divisions</h2>
     <div class="grid">
-      <div class="card"><h3>Technology</h3><p>Cutting-edge digital development, infrastructure, and automation.</p></div>
-      <div class="card"><h3>Investments</h3><p>Strategic capital placement built on stability and growth forecasting.</p></div>
-      <div class="card"><h3>Services</h3><p>Operational excellence across consulting, logistics, and enterprise support.</p></div>
-      <div class="card"><h3>Innovation Lab</h3><p>Designing the future through research, prototypes, and experimental ventures.</p></div>
+      <div class="card"><h3>Technology</h3><p>Digital architecture, automation, and R&D innovation.</p></div>
+      <div class="card"><h3>Investments</h3><p>Strategic capital placement driven by disciplined forecasting.</p></div>
+      <div class="card"><h3>Services</h3><p>Operational excellence spanning consulting and enterprise logistics.</p></div>
+      <div class="card"><h3>Innovation Lab</h3><p>Future-focused prototypes, research, and experimental development.</p></div>
     </div>
   </section>
 
-  <section id="values" class="section values">
+  <!-- VALUES -->
+  <section id="values" class="section fade">
     <h2>Core Values</h2>
     <ul class="values-list">
       <li>Integrity in all operations</li>
@@ -52,15 +62,17 @@
     </ul>
   </section>
 
-  <section id="leadership" class="section leadership">
+  <!-- LEADERSHIP -->
+  <section id="leadership" class="section fade">
     <h2>Leadership</h2>
     <div class="leader-card">
       <h3>Joseph Coolidge</h3>
       <p>Founder & Chief Executive Officer</p>
-      <p>A visionary strategist leading a multi-industry ecosystem with precision and ambition.</p>
+      <p>A disciplined strategist leading a multi-sector enterprise with precision and ambition.</p>
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <p>© 2025 Joseph Coolidge. All Rights Reserved.</p>
   </footer>
