--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <nav class="navbar">
     <div class="logo">Joseph Coolidge</div>
     <ul class="nav-links">
-      <li><a href="#about">About</a></li>
-      <li><a href="#divisions">Divisions</a></li>
-      <li><a href="#values">Values</a></li>
-      <li><a href="#leadership">Leadership</a></li>
+      <li><a href="#about">Overview</a></li>
+      <li><a href="#performance">Performance</a></li>
+      <li><a href="#strategy">Strategy</a></li>
+      <li><a href="#leadership">About</a></li>
     </ul>
   </nav>
 
@@ -23,58 +23,102 @@
   <header class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-inner">
-      <h1>Architecting the Future of Enterprise</h1>
-      <p>Strategic infrastructure powering a multi-industry ecosystem.</p>
+      <h1>Organic Growth at Scale</h1>
+      <p>Short-form content engineered for reach, engagement, and algorithmic dominance.</p>
       <div class="accent-line"></div>
     </div>
   </header>
 
   <!-- ABOUT -->
   <section id="about" class="section fade">
-    <h2>Who We Are</h2>
+    <h2>Overview</h2>
     <p>
-      Joseph Coolidge is a parent organization built to support, fund, 
-      and guide a diversified portfolio of ventures. We prioritize 
-      long-term strategy, sustainable growth, and systems engineered 
-      to thrive in complex environments.
+      Joseph Coolidge is a performance-driven social media brand focused on organic growth
+      through short-form content. In just three months, a single account was scaled through
+      platform-native strategy, trend execution, and data-driven iteration—without paid ads.
     </p>
   </section>
 
-  <!-- DIVISIONS -->
-  <section id="divisions" class="section fade">
-    <h2>Our Divisions</h2>
+  <!-- PERFORMANCE METRICS -->
+  <section id="performance" class="section fade">
+    <h2>Performance Snapshot (90 Days)</h2>
     <div class="grid">
-      <div class="card"><h3>Technology</h3><p>Digital architecture, automation, and R&D innovation.</p></div>
-      <div class="card"><h3>Investments</h3><p>Strategic capital placement driven by disciplined forecasting.</p></div>
-      <div class="card"><h3>Services</h3><p>Operational excellence spanning consulting and enterprise logistics.</p></div>
-      <div class="card"><h3>Innovation Lab</h3><p>Future-focused prototypes, research, and experimental development.</p></div>
+      <div class="card">
+        <h3>Audience Growth</h3>
+        <p><strong>1,351 followers</strong><br>Built organically from zero</p>
+      </div>
+      <div class="card">
+        <h3>Total Views</h3>
+        <p><strong>1.6 million views</strong><br>Single account performance</p>
+      </div>
+      <div class="card">
+        <h3>Profile Views</h3>
+        <p><strong>10,000+</strong><br>High intent traffic</p>
+      </div>
+      <div class="card">
+        <h3>Engagement</h3>
+        <p>
+          <strong>246K likes</strong><br>
+          1,989 comments<br>
+          14,000 shares
+        </p>
+      </div>
     </div>
   </section>
 
-  <!-- VALUES -->
-  <section id="values" class="section fade">
-    <h2>Core Values</h2>
-    <ul class="values-list">
-      <li>Integrity in all operations</li>
-      <li>Forward-thinking strategy</li>
-      <li>Relentless pursuit of excellence</li>
-      <li>Innovation with long-term impact</li>
-    </ul>
+  <!-- STRATEGY -->
+  <section id="strategy" class="section fade">
+    <h2>Content & Algorithm Performance</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>Engagement Quality</h3>
+        <p>
+          Averaged <strong>14%+ like-to-view engagement</strong>,
+          significantly outperforming platform benchmarks.
+        </p>
+      </div>
+      <div class="card">
+        <h3>Traffic Sources</h3>
+        <p>
+          <strong>87%</strong> For You Page<br>
+          8.5% Personal Profile<br>
+          4.4% Search
+        </p>
+      </div>
+      <div class="card">
+        <h3>Execution</h3>
+        <p>
+          Hook optimization, retention pacing, trend timing,
+          and iterative testing based on performance data.
+        </p>
+      </div>
+      <div class="card">
+        <h3>System Design</h3>
+        <p>
+          Repeatable content frameworks built for scalability,
+          consistency, and sustained reach.
+        </p>
+      </div>
+    </div>
   </section>
 
-  <!-- LEADERSHIP -->
+  <!-- LEADERSHIP / ABOUT YOU -->
   <section id="leadership" class="section fade">
-    <h2>Leadership</h2>
+    <h2>About</h2>
     <div class="leader-card">
       <h3>Joseph Coolidge</h3>
-      <p>Founder & Chief Executive Officer</p>
-      <p>A disciplined strategist leading a multi-sector enterprise with precision and ambition.</p>
+      <p>Social Media Manager & Content Strategist</p>
+      <p>
+        Focused on scaling accounts through organic short-form content.
+        Specializes in algorithm-aware execution, engagement optimization,
+        and growth systems that reliably reach large audiences.
+      </p>
     </div>
   </section>
 
   <!-- FOOTER -->
   <footer class="footer">
-    <p>© 2025 Joseph Coolidge. All Rights Reserved.</p>
+    <p>© 2025 Joseph Coolidge. Performance-Driven Social Media.</p>
   </footer>
 
   <script src="script.js"></script>
