--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>
       Joseph Coolidge is a performance-driven social media brand focused on organic growth
       through short-form content. In just three months, a single account was scaled through
-      platform-native strategy, trend execution, and data-driven iteration—without paid ads.
+      platform-native strategy, trend execution, and data-driven iteration without paid ads.
     </p>
   </section>
 
@@ -53,7 +53,7 @@
       </div>
       <div class="card">
         <h3>Profile Views</h3>
-        <p><strong>10,000+</strong><br>High intent traffic</p>
+        <p><strong>10,000+</strong><br>High traffic</p>
       </div>
       <div class="card">
         <h3>Engagement</h3>
@@ -106,11 +106,11 @@
   <section id="leadership" class="section fade">
     <h2>About</h2>
     <div class="leader-card">
-      <h3>Joseph Coolidge</h3>
+      <h3>Brant Borden</h3>
       <p>Social Media Manager & Content Strategist</p>
       <p>
         Focused on scaling accounts through organic short-form content.
-        Specializes in algorithm-aware execution, engagement optimization,
+        Specializes in algorithm-aware building, engagement optimization,
         and growth systems that reliably reach large audiences.
       </p>
     </div>
