--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-  <!-- NAVBAR -->
   <nav class="navbar">
     <div class="logo">Joseph Coolidge</div>
     <ul class="nav-links">
@@ -19,7 +18,6 @@
     </ul>
   </nav>
 
-  <!-- HERO -->
   <header class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-inner">
@@ -29,17 +27,15 @@
     </div>
   </header>
 
-  <!-- ABOUT -->
   <section id="about" class="section fade">
     <h2>Overview</h2>
     <p>
-      Joseph Coolidge is a performance-driven social media brand focused on organic growth
+      Joseph Coolidge is a performance driven social media brand focused on organic growth
       through short-form content. In just three months, a single account was scaled through
       platform-native strategy, trend execution, and data-driven iteration without paid ads.
     </p>
   </section>
 
-  <!-- PERFORMANCE METRICS -->
   <section id="performance" class="section fade">
     <h2>Performance Snapshot (90 Days)</h2>
     <div class="grid">
@@ -66,8 +62,7 @@
     </div>
   </section>
 
-  <!-- STRATEGY -->
-  <section id="strategy" class="section fade">
+    <section id="strategy" class="section fade">
     <h2>Content & Algorithm Performance</h2>
     <div class="grid">
       <div class="card">
@@ -102,7 +97,6 @@
     </div>
   </section>
 
-  <!-- LEADERSHIP / ABOUT YOU -->
   <section id="leadership" class="section fade">
     <h2>About</h2>
     <div class="leader-card">
@@ -116,9 +110,8 @@
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer class="footer">
-    <p>© 2025 Joseph Coolidge. Performance-Driven Social Media.</p>
+    <p>© 2025 Joseph Coolidge. Performance Driven Social Media.</p>
   </footer>
 
   <script src="script.js"></script>
