--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>
       Joseph Coolidge is a performance driven social media brand focused on organic growth
       through short-form content. In just three months, a single account was scaled through
-      platform-native strategy, trend execution, and data-driven iteration without paid ads.
+      platform strategy, trend research, and data driven production without paid ads.
     </p>
   </section>
 
