--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="hero-overlay"></div>
     <div class="hero-inner">
       <h1>Organic Growth at Scale</h1>
-      <p>Short-form content engineered for reach, engagement, and algorithmic dominance.</p>
+      <p>Short-form content engineered for reach, engagement, and algorithm dominance.</p>
       <div class="accent-line"></div>
     </div>
   </header>
