--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h3>Execution</h3>
         <p>
           Hook optimization, retention pacing, trend timing,
-          and iterative testing based on performance data.
+          and dynamic testing based on performance data.
         </p>
       </div>
       <div class="card">
@@ -104,7 +104,7 @@
       <p>Social Media Manager & Content Strategist</p>
       <p>
         Focused on scaling accounts through organic short-form content.
-        Specializes in algorithm-aware building, engagement optimization,
+        Specializes in algorithm aware building, engagement optimization,
         and growth systems that reliably reach large audiences.
       </p>
     </div>
